fix position on mobile

--- a/src/features/public/Donations/styles/MapboxMap.module.scss
+++ b/src/features/public/Donations/styles/MapboxMap.module.scss
@@ -392,4 +392,8 @@
   .projectControls {
     bottom: 80px;
   }
+  .infoExpanded {
+    right: 0px;
+    top: 60px;
+  }
 }
